--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body{
     transition: 0.7s;
     box-shadow:
      inset #262727 4px 4px 15px, 
-     #22d4fd 3px 3px 5px;
+      #00ffd5 3px 3px 5px;
 }
 
 .botao_secundario{
@@ -85,7 +85,7 @@ body{
     margin: 0 10em;
 }
 
-.container__imagem{
+.secundario__imagem{
     width: 80%;
 }
 
@@ -172,3 +172,47 @@ body{
     color: var(#c0c0c0);
     margin:2em 0;
 } 
+
+
+@media screen and (max-width:768px){
+
+    /* sessao principal */
+    .container{
+        display: block;
+        background-image: none;
+    }
+
+    .container__caixa{
+        margin: 2em 2em ;
+    }
+
+    .container__imagem{
+        width: 50vw;
+    }
+
+
+    /* sessao secundaaria */
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem{
+        width: 50vw;
+    }
+
+    /* sessao 3 DISPOSITIVOS */
+   .dispositivos__lista{
+        display: block;
+    }
+
+
+    /* rodape  */
+
+    .rodape__listas{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
