ajuste na altura da container e correção na margem da container__caixa

--- a/style.css
+++ b/style.css
@@ -181,10 +181,11 @@ body{
     .container{
         display: block;
         background-image: none;
+        height: 550px; ;
     }
 
     .container__caixa{
-        margin: 2em 2em ;
+        margin:2em 2em ;
     }
 
     .container__imagem{
